2011-04-14  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/fgraph.php: Merged changes from 
	miguel works in Pandora like checks, margins in
	the graphs, etc.

2011-04-14  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/pChart/pDraw.class.php: Added the angle of
	top axis into bar graphs of pchart.
	Fixed position of pie charts legend

2011-04-14  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/fgraph.php: Added x and y axis name possibility
	to line, stacked line and stacked area graphs

2011-04-13  Sancho Lerena <slerena@artica.es>

	* include/styles/integria.css: Fixed a lot problems with IE :(

	* include/integria_cron.php: Tab.

	* godmode/setup/filemgr.php: Added repository for filereleases.

2011-04-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/graphs/functions_gd.php
	include/graphs/fgraph.php: Enabled dual way to
	call gd graphics: through url and thorugh call 
	to function

2011-04-13  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php: Restored Miguel
	code erased by me in the last commit and improved the
	legend system to show it in horizontal when is possible

2011-04-13  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/functions_gd.php
	include/graphs/fgraph.php: Added new slicebar graphs
	to the abstraction and merged the improved by miguel
	of gd progressbar function

2011-04-13  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/fgraph.php: Fixes merged from
	miguel works on pandora like checks of empty
	color and legend parameters and checks of 
	min height for a graph

2011-04-13  Sergio Martin <sergio.martin@artica.es>

	*  include/graphs/functions_pchart.php
	 include/graphs/functions_fsgraph.php
	 include/graphs/functions_gd.php
	 include/graphs/fgraph.php: Fixed long index