@@ -1,6 +1,14 @@
 2011-04-14  Sergio Martin <sergio.martin@artica.es>
 
 	* include/graphs/functions_pchart.php
+	include/graphs/functions_fsgraph.php
+	include/graphs/fgraph.php: Merged from miguel works
+	url home pass to abstraction to call files correctly.
+	Increased line weights into line graphs
+
+2011-04-14  Sergio Martin <sergio.martin@artica.es>
+
+	* include/graphs/functions_pchart.php
 	include/graphs/fgraph.php: Merged changes from 
 	miguel works in Pandora like checks, margins in
 	the graphs, etc.
